@@ -3,4 +3,5 @@
   - fix broken VertexConditionNumber quality metric
   - fix unusable iGeom/iRel interface classes
   - fix bugs in iRel interface class
-
+  - fix floating point error in TrustRegion for zero-diagonal Hessian blocks
+  - fix trapping of floating point errors
